objects/JBCXM__GSRelationshipContacts__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Contacts</relationshipLabel>
        <relationshipName>RelationshipContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSRole__c</fullName>
        <description>Role for Relationship Contact</description>
        <label>Role</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>Relationship Contacts</relationshipLabel>
        <relationshipName>RelationshipContacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Relationship Contact</label>
    <nameField>
        <label>Relationship Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>